# owl_control

./: .env  .gitignore  Cargo.toml  README.md  game_list.txt  package.json  record.py  requirements.txt
crates/owl-recorder/: Cargo.toml
crates/owl-recorder/src/: main.rs  recorder.rs  recording.rs
crates/video-audio-recorder/: Cargo.toml
crates/video-audio-recorder/src/: lib.rs  metrics.rs
data_utils/: constants.py  keybinds.py  process_video_actions.py  utils.py
src/: index.js  main.ts
src/pages/: settings-page.tsx
src/services/: electron-service.ts  python-bridge.ts
vg_control/: constants.py  main.py  recorder.py  recording_bridge.py
vg_control/data/: owl.py  secure_uploader.py
vg_control/data/idm/: build_datalist.py  idm_dataset.py
vg_control/data/idm_dataset/: build_idm_index.py  dataset.py
vg_control/data/movingdot/: single.py
vg_control/input_tracking/: rawinputlib.py
vg_control/models/: resnet.py  train_idm.py  validate_frame_controls.py
vg_control/optim/: muon.py
vg_control/security/: __init__.py  session_manager.py
vg_control/video/: obs_client.py
