[package]
name = "video-audio-recorder"
version = "0.0.0"
edition = "2024"

[dependencies]
clap.workspace = true
tracing.workspace = true
gstreamer.workspace = true
tokio.workspace = true
futures-util.workspace = true
color-eyre.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
num_cpus = "1.15.0"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.36.0"
